<resources>
    <string name="app_name">Blood Donor Management</string>
    <string name="user_registration">User Registration</string>
    <string name="user_login">User Login</string>
    <string name="full_name">Full Name</string>
    <string name="date_of_birth">Date Of Birth</string>
    <string name="age">Age</string>
    <string name="phone_number">Phone Number</string>
    <string name="email_id">Email Id</string>
    <string name="password">Password</string>
    <string name="conform_password">Conform Password</string>
    <string name="register_user">Register User</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string-array name="bloodgrp">
        <item>A+</item>
        <item>A-</item>
        <item>B+</item>
        <item>B-</item>
        <item>AB+</item>
        <item>AB-</item>
        <item>O+</item>
        <item>O-</item>
        <item>A1B+</item>
        <item>A1B-</item>
        <item>A2+</item>
        <item>A2-</item>
        <item>Bombay</item>
        <item>INRA</item>
    </string-array>

    <string-array name="status">
        <item>Available</item>
        <item>Unavailable</item>
    </string-array>

    <string-array name="district">

        <item>Ariyalur</item>
        <item>Chengalpattu</item>
        <item>Chennai</item>
        <item>Coimbatore</item>
        <item>Cuddalore</item>
        <item>Dharmapuri</item>
        <item>Dindigul</item>
        <item>Erode</item>
        <item>Kallakurichi</item>
        <item>Kancheepuram</item>
        <item>Karur</item>
        <item>Krishnagiri</item>
        <item>Madurai</item>
        <item>Mayiladuthurai</item>
        <item>Nagapattinam</item>
        <item>Kanyakumari</item>
        <item>Namakkal</item>
        <item>Perambalur</item>
        <item>Pudukottai</item>
        <item>Ramanathapuram</item>
        <item>Ranipet</item>
        <item>Salem</item>
        <item>Sivagangai</item>
        <item>Tenkasi</item>
        <item>Thanjavur</item>
        <item>Theni</item>
        <item>Thiruvallur</item>
        <item>Thiruvarur</item>
        <item>Thoothukudi</item>
        <item>Tiruchirappalli</item>
        <item>Tirunelveli</item>
        <item>Tirupathur</item>
        <item>Tiruppur</item>
        <item>Tiruvannamalai</item>
        <item>The Nilgiris</item>
        <item>Vellore</item>
        <item>Viluppuram</item>
        <item>Virudhunagar</item>

    </string-array>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>