<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.subairdc.bdma.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.subairdc.bdma.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.subairdc.bdma.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/nav_profile"
        android:name="com.subairdc.bdma.ui.Fragments.ProfileFragment"
        android:label="Profile"
        tools:layout="@layout/fragment_profile" />
    <fragment
        android:id="@+id/nav_bloodBankList"
        android:name="com.subairdc.bdma.ui.Fragments.BloodBankListFragment"
        android:label="Blood Bank List"
        tools:layout="@layout/fragment_blood_bank_list" />
    <fragment
        android:id="@+id/nav_about"
        android:name="com.subairdc.bdma.ui.Fragments.AboutFragment"
        android:label="About"
        tools:layout="@layout/fragment_about" />
    <fragment
        android:id="@+id/nav_contactus"
        android:name="com.subairdc.bdma.ui.Fragments.ContactusFragment"
        android:label="Contact us"
        tools:layout="@layout/fragment_contactus" />
    <fragment
        android:id="@+id/nav_findDonor"
        android:name="com.subairdc.bdma.ui.Fragments.FindDonorFragment"
        android:label="Find Donor"
        tools:layout="@layout/fragment_find_donor" />
    <fragment
        android:id="@+id/nav_addDonor"
        android:name="com.subairdc.bdma.ui.Fragments.AddDonorFragment"
        android:label="Add Donor"
        tools:layout="@layout/fragment_add_donor" />
    <fragment
        android:id="@+id/nav_updateDonor"
        android:name="com.subairdc.bdma.ui.Fragments.UpdateDonorFragment"
        android:label="Update Donor"
        tools:layout="@layout/fragment_update_donor" />
    <fragment
        android:id="@+id/nav_view_donor_details"
        android:name="com.subairdc.bdma.ui.Fragments.ViewDonorDetailsFragment"
        android:label="View Donors Details"
        tools:layout="@layout/fragment_view_donor_details" />
    <fragment
        android:id="@+id/nav_donorList"
        android:name="com.subairdc.bdma.ui.Fragments.DonorListFragment"
        android:label="Donor List"
        tools:layout="@layout/fragment_donor_list" />
</navigation>